Fix menu-slide overlapping

--- a/css/base.css
+++ b/css/base.css
@@ -60,9 +60,6 @@ body {
 /****************************** HEADER ************************************/
 header{
 	z-index: 2;
-    position: absolute;
-    top: 0;
-    left: 0;
 	background: white;
 	text-align: center;
 	width: 100vw;
